fix bugs `z-index` and `resize window`

--- a/styles/header.css
+++ b/styles/header.css
@@ -89,6 +89,7 @@ nav {
   position: absolute;
   top: 10vh;
   right: 0;
+  z-index: 999;
 }
 
 .menu_opcoes_div {
